New Updates for card portfolio

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 .hidden {
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s 2s, opacity 2s linear;
+  transition: visibility 0s 1s, opacity 1s linear;
 }
 
 body {
@@ -193,6 +193,7 @@ body .options .option .label .info .sub {
   transition-delay: 0.1s;
 }
 
+/*BOTTOM CIRCULAR MENU WITH LINKS*/
 .circular-menu {
   position: fixed;
   bottom: 1em;
@@ -305,11 +306,11 @@ body .options .option .label .info .sub {
 }
 
 .circular-menu.circular-menu-left .floating-btn {
-  background-color: hsl(301deg, 67%, 50%);
+  background-color: hsl(285deg, 67%, 50%);
 }
 
 .circular-menu.circular-menu-left:after {
-  background-color: hsl(301deg, 67%, 50%);
+  background-color: hsl(285deg, 67%, 50%);
 }
 
 .circular-menu.circular-menu-left.active .floating-btn i {
